Added teaching for spring 2017. Updated homework-loading module. Updated style sheets. Updated published article list.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 		<h2>Teaching</h2>
 		<ul>
+		    <li>Spring 2017 MATH620040 <a href="teaching/Spring2017_CommutativeAlgebra.html">Commutative
+			Algebra</a></li>
 		    <li>Spring 2016 MATH620040 <a href="teaching/Spring2016_CommutativeAlgebra.html">Commutative
 			Algebra</a></li>
 		    <li>Spring 2015 MATH 4242 <a href="teaching/Spring2015_AppliedLinearAlgebra.html">Applied Linear
