--- a/teaching/Spring2016_CommutativeAlgebra.html
+++ b/teaching/Spring2016_CommutativeAlgebra.html
@@ -4,46 +4,46 @@
 	
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="../js/lib/jquerymobile/jquery.mobile-1.4.5.min.css" />
-	<script src="../js/lib/jquery/jquery-2.2.1.min.js"></script>
-	<script src="../js/lib/jquerymobile/jquery.mobile-1.4.5.min.js"></script>
+	<script src="../js/lib/jquery/jquery-3.1.1.min.js"></script>
 	<script src="../js/common.js"></script>
+	<script src="../js/util.js"></script>
 	<script src="../js/load-homework.js"></script>
 	<script>
-	//to-do: package js better
-	$(document).on("pagecreate",function(){
-		init();
-		homeworkElement=$("#hw");
+	$(document).ready(function(){
+	     init();
+	     var homeworkElement=$("#hw");
+	     var homeworkJSONFile="Spring2016_CommutativeAlgebra-homework.json";
+	     var startDate=new Date(2016,1,29);
+	     var hl=homeworkLoader();
+	     hl.setup(homeworkElement,homeworkJSONFile);
+	     hl.loadHomework(startDate);
 		
-		var startDate=new Date(2016,1,29);
-				
-		loadHomework(startDate);
 	});
 	</script>
 	<title>Spring 2016 Commutative Algebra</title>
-	<link rel="stylesheet" href="../css/basic-jquery-mobile-custom.css"/>
 	<link rel="stylesheet" href="../css/basic.css"/>
 	<link id="custom-ss" rel="stylesheet" href=""/>
 </head>
 <body>
 
-<div data-role="page">
-  	<div role="main" class="ui-content">
-		<div class="ui-corner-all ui-body-d ui-shadow">
+<div class="page">
+  	<div class="main">
+		<div class="title-banner">
 		<h1>Math620040 Spring 2016 Commutative Algebra</h1>
 		</div>
-		<div class="ui-corner-all ui-body-a ui-shadow">
-		<p><b>Day/Time:</b> 8:00 A.M. - 10:40 A.M., Tuesdays (03/01/2016 - 06/14/2016)<b><br>
-		Location:</b> H2217<b><br>
-		Instructor:</b> Chenyan Wu<br>
-		<b>Contact Information:</b> chywu "at" fudan.edu.cn<br>
-		<b>Office:</b> HGD 2310<br>
-		<b>Textbook:</b> Introduction to Commutative Algebra by M.F. Atiyah and I. G. MacDonald<br>
+		<div class="standout">
+		    <p><b>Day/Time:</b> 8:00 A.M. - 10:40 A.M., Tuesdays (03/01/2016 - 06/14/2016)<b><br>
+			Location:</b> H2217<b><br>
+			Instructor:</b> Chenyan Wu<br>
+			<b>Contact Information:</b> chywu "at" fudan.edu.cn<br>
+			<b>Office:</b> HGD 2310<br>
+			<b>Textbook:</b> Introduction to Commutative Algebra by M.F. Atiyah and I. G. MacDonald<br>
+		    </p>
 		</div>
 		
-		<div class="ui-body-c">
+		<div class="">
 		<h3>Course Description:</h3> 
-		This course aims to give the prerequisites of the course on Algebraic Geometry. We will cover
+		<p>This course aims to give the prerequisites of the course on Algebraic Geometry. We will cover
 		all 11 chapters of the textbook. Time permitting we will also discuss some parts of Serre's book, Local Fields.
 		Students are welcome to suggest additional topics. Students are expected to have taken a course on Abstract Algebra.</p>
 		<p>Homework will be assigned every week but not collected. Students are encouraged to discuss the assignments.
@@ -52,14 +52,14 @@
 		to take place on date to be announced. Grade will be based on the seminar talk and the final.</p>
 		</div>
 		
-		<div class="ui-body-c">
+		<div class="">
 		<h3>Assignments: </h3></div>
 		<noscript><p>Please turn on Javascript to view this page properly.</p></noscript>
 		<!--ajax in the assignments here and form a table-->
-		<table id="hw-table" class="ui-body-a">
+		<table id="hw-table" class="standout">
 		<caption></caption>
 		<thead>
-		<tr><th width="20%">Week</th><th width="30%">Topic</th><th width="50%">Homework</th></tr>
+		<tr><th width="25%">Week</th><th width="25%">Topic</th><th width="50%">Homework</th></tr>
 		</thead>
 		<tbody id="hw"></tbody>
 		</table>
