Added Chinese names

--- a/index.html
+++ b/index.html
@@ -15,18 +15,23 @@
     <body>
 	<div class= "page">
 	    <div class= "main">
-		<h1>Chenyan Wu</h1>
+		<h1>Chenyan Wu (吴晨彦)</h1>
 		<p>Young Investigator at Shanghai Center for Mathematical
 		    Sciences<br/><a href="https://cywu.github.io/">https://cywu.github.io/</a></p>
 		<hr/>
-		<p>
-		    <b>Email:</b> chywu "at" fudan.edu.cn<br/>
-		    <b>Mailing Address:</b><br/>
-		    220 Handan Rd.<br/>  Fudan University<br/>
-		    Shanghai Center for Mathematical Sciences<br/>
-		    Guanghua East Main Building 2310<br/>
-		    Shanghai, 200433, China<br/>
-		</p>
+		<div>
+		    <p><b>Email:</b> chywu "at" fudan.edu.cn<br/></p>
+		    <p><b>Mailing Address:</b></p>
+		    <div class="flex-row">
+			<p class="flex-item">220 Handan Rd.<br/>  Fudan University<br/>
+			Shanghai Center for Mathematical Sciences<br/>
+			Guanghua East Main Building 2310<br/>
+			Shanghai, 200433, China</p>
+			<p class="flex-item">上海数学中心，复旦大学<br/>
+			    邯郸路220号，光华楼东主楼2310室<br/>
+			    上海，200433，中国</p>
+		    </div>
+		</div>
 
 		<h2>Teaching</h2>
 		<ul>
@@ -73,12 +78,12 @@
 		    </li>
 		    <li>Periods
 			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory, Taida Institute for
-			Mathematical Sciences, Taiwan, China, Aug. 2, 2016
+			Mathematical Sciences, Taipei, China, Aug. 2, 2016
 		    </li>
 		    <li>Weil Conjectures for Abelian Varieties, Taida Institute for
-			Mathematical Sciences, Taiwan, China, July 19 and July 26, 2016</li>
+			Mathematical Sciences, Taipei, China, July 19 and July 26, 2016</li>
 		    <li>Involutive Property of Theta Correspondence, Shanghai Center for
-			Mathematical Sciences, China, April. 1, 2016</li>
+			Mathematical Sciences, Shanghai, China, April. 1, 2016</li>
 		    <li>Theta correspondence, periods and Arthur Parameters, Conference on
 			Eisenstein Series on Kac-Moody Groups and Applications to Physics at
 			KIAS, Seoul, South Korea, Nov. 16, 2015</li>
@@ -88,45 +93,45 @@
 			and <math><mrow><mi>L</mi></mrow></math>-functions, Morningside Center
 			of Mathematics, Beijing, China, July 17 and July 19, 2015</li>
 		    <li>Theta correspondence, periods and Arthur Parameters, University of
-			Missouri, Missouri, USA, Apr. 21, 2015</li>
+			Missouri, Columbia, MO, USA, Apr. 21, 2015</li>
 		    <li>Theta correspondence, periods
 			and <math><mrow><mi>L</mi></mrow></math>-functions, Part III,
-			University of Minnesota, Minnesota, USA, Feb. 27, 2015</li>
+			University of Minnesota, Minneapolis, MN, USA, Feb. 27, 2015</li>
 		    <li>Theta correspondence, periods
 			and <math><mrow><mi>L</mi></mrow></math>-functions, Part II,
-			University of Minnesota, Minnesota, USA, Feb. 13, 2015</li>
+			University of Minnesota, Minneapolis, MN, USA, Feb. 13, 2015</li>
 		    <li>Theta correspondence, periods
 			and <math><mrow><mi>L</mi></mrow></math>-functions, Part I, University
-			of Minnesota, Minnesota, USA, Feb. 6, 2015</li>
+			of Minnesota, Minneapolis, MN, USA, Feb. 6, 2015</li>
 		    <li>Some applications of the Arthur trucation method, University of
-			Minnesota, Minnesota, USA, Nov. 14, 2014</li>
+			Minnesota, Minneapolis, MN, USA, Nov. 14, 2014</li>
 		    <li>Periods
 			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-factors
 			of cuspidal automorphic forms of symplectic groups, University of
-			Minnesota, Minnesota, USA, Nov. 7, 2014</li>
-		    <li>On Gan-Gross-Prasad Conjecture, University of Minnesota, Minnesota, USA, Nov. 1
+			Minnesota, Minneapolis, MN, USA, Nov. 7, 2014</li>
+		    <li>On Gan-Gross-Prasad Conjecture, University of Minnesota, Minneapolis, MN, USA, Nov. 1
 			and Nov. 8, 2013</li>
 		    <li>Virtual Abelian Varieties
 			of <math><mrow><msub><mi>GL</mi><mn>2</mn></msub></mrow></math>-type,
 			Max-Planck-Institut für Mathematik, Bonn, Germany, Dec. 6, 2012</li>
-		    <li>Rallis Inner Product Formula, University of Wisconsin-Madison, Wisconsin, USA,
+		    <li>Rallis Inner Product Formula, University of Wisconsin-Madison, Madison, WI, USA,
 			Apr. 12 2012</li>
-		    <li>Theta correspondence for unitary groups, University of Minnesota, Minnesota, USA, 
+		    <li>Theta correspondence for unitary groups, University of Minnesota, Minneapolis, MN, USA, 
 			Jan. 27, Feb. 3, Mar. 2 and Mar. 23, 2012</li>
 		    <li>Rallis Inner Product Formula
 			for <math><mrow><mi>Mp</mi><mfenced separators=""><mn>2</mn><mi>n</mi></mfenced></mrow></math>
 			and
 			<math><mrow><mi mathvariant="normal">O</mi><mfenced separators=""><mn>2</mn><mi>n</mi><mo>+</mo><mn>1</mn>
 			</mfenced></mrow></math>,
-			University of Minnesota, Minnesota, USA, Oct. 7, 2011</li>
-		    <li>Moduli space of virtual Abelian varieties, Yale University, Connecticut, USA, Jan. 25, 2011</li>
+			University of Minnesota, Minneapolis, MN, USA, Oct. 7, 2011</li>
+		    <li>Moduli space of virtual Abelian varieties, Yale University, New Haven, CT, USA, Jan. 25, 2011</li>
 		</ul>
 
 		<h2>Conferences, Workshops and Short Visits</h2>
 		<ul>
-		    <li>Zhejiang University, visiting Professor Dihua Jiang, Hangzhou, China, Oct. 7 - 10, 2016</li>
+		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
-		    <li>Taida Institute for  Mathematical Sciences, Taiwan, China, Visiting Professor Chang-Shou Lin, July 17 - Aug. 7, 2016</li>
+		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
 		    <li>Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <math><mrow><mi>L</mi></mrow></math>-functions, Harmonic Analysis and Langlands Functoriality, CIRM, Marseille, France, May 16 - 27, 2016</li>
 		    <li>Eisenstein Series on Kac-Moody Groups and Application to Physics, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
 		    <li>Workshop on Number Theory, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
@@ -135,15 +140,15 @@
 
 		<h2>Employment and Visiting Positions</h2>
 		<ul class= "plain"><li>Young Investigator, Shanghai Center for Mathematical Sciences, Sept. 2015 - present</li>
-		    <li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang</a>.</li>
+		    <li>Dunham Jackson Assistance Professor, University of Minnesota, Aug. 29, 2011 - May 24, 2015, mainly working with Professor <a href= "http://www.math.umn.edu/~jiang034/">Dihua Jiang (江迪华)</a>.</li>
 		    <li>Visiting Max-Planck Institute for Mathematics, Sept. 1, 2012 - Aug.
 			31, 2013</li>
 		</ul>
 
 		<h2>Education</h2>
 		<ul class= "plain"><li>Ph.D. Mathematics, Columbia University, 2006–2011, Thesis Advisor:
-		    Professor <a href="https://web.math.princeton.edu/~shouwu/">Shou-Wu Zhang</a>;</li>
-		    <li>B.S. Mathematics, Fudan University, 2002–2006.</li>
+		    Professor <a href="https://web.math.princeton.edu/~shouwu/">Shou-Wu Zhang (张寿武)</a>;</li>
+		    <li>B.S. Mathematics, Fudan (复旦) University, 2002–2006.</li>
 		</ul>
 	    </div>
 	</div>
