Added talks and visits info. Updated index files' jquery version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 	<meta content="text/html; charset=utf-8" http-equiv="content-type">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="js/lib/jquery/jquery-2.2.1.min.js"></script>
+	<script src="js/lib/jquery/jquery-3.1.1.min.js"></script>
 	<script src="js/common.js"></script>
 	<script>
 	 $(document).ready(init);
@@ -72,6 +72,21 @@
 
 		<h2>Talks</h2>
 		<ul>
+		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
+			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+			Hunan University,
+			Changsha, China, May TBA, 2017
+		    </li>
+		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
+			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+			National University of Singapore,
+			Singapore, Apr. 16 - 22, 2017
+		    </li>
+		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
+			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+			Xiamen University,
+			Xiamen, China, Mar. 7 - 10, 2017
+		    </li>
 		    <li>Theta Correspondence, Periods
 			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory, Zhejiang University,
 			Hangzhou, China, Sept. 11, 2016
@@ -129,6 +144,10 @@
 
 		<h2>Conferences, Workshops and Short Visits</h2>
 		<ul>
+		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Dates TBA</li>
+		    <li>Informal Workshop on Automorphic Forms and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
+		    <li>Conference on Automorphic Forms and Related Topics at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
+		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
 		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
 		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
