added links to conference web page

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
 		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
-		    <li>Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <math><mrow><mi>L</mi></mrow></math>-functions, Harmonic Analysis and Langlands Functoriality, CIRM, Marseille, France, May 16 - 27, 2016</li>
-		    <li>Eisenstein Series on Kac-Moody Groups and Application to Physics, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
-		    <li>Workshop on Number Theory, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
+		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <math><mrow><mi>L</mi></mrow></math>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
+		    <li><a href="http://home.kias.re.kr/MKG/h/EKM2015/">Eisenstein Series on Kac-Moody Groups and Application to Physics</a>, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
+		    <li><a href="http://2015wnt.csp.escience.cn/dct/page/65580">Workshop on Number Theory</a>, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
 		    <li>Past events are omitted.</li>
 		</ul>
 
