--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 		    <li>Informal Workshop on Automorphic Forms and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
 		    <li>Conference on Automorphic Forms and Related Topics at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
+		    <li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
 		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
 		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
