updated conference info

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 		    <p><b>Mailing Address:</b></p>
 		    <div class="flex-row">
 			<p class="flex-item">220 Handan Rd.<br/>  Fudan University<br/>
-			Shanghai Center for Mathematical Sciences<br/>
-			Guanghua East Main Building 2310<br/>
-			Shanghai, 200433, China</p>
+			    Shanghai Center for Mathematical Sciences<br/>
+			    Guanghua East Main Building 2310<br/>
+			    Shanghai, 200433, China</p>
 			<p class="flex-item">上海数学中心，复旦大学<br/>
 			    邯郸路220号，光华楼东主楼2310室<br/>
 			    上海，200433，中国</p>
@@ -145,8 +145,8 @@
 		<h2>Conferences, Workshops and Short Visits</h2>
 		<ul>
 		    <li>Visiting Professor Dihua Jiang at University of Minnesota, Minneapolis, USA, Dates TBA</li>
-		    <li>Informal Workshop on Automorphic Forms and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
-		    <li>Conference on Automorphic Forms and Related Topics at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
+		    <li>Workshop on Automorphic Representations and Related Topics at Shanghai Center for Mathematical Sciences, Shanghai, and Zhejiang University, Hangzhou, China, July TBA, 2017</li>
+		    <li>Workshop on Lie Group Representations and Automorphic Forms at Beijing International Center for Mathematical Research, Beijing, China, July 3 - 8, 2017</li>
 		    <li><a href="http://homepage.fudan.edu.cn/mchen/conferences/2017-fudan-kaist/">FUDAN-KAIST Joint Workshop on Algebra and Geometry</a>, Shanghai, China, June 6 - 10, 2017</li>
 		    <li>2017 Young Mathematician Forum, Fudan University, Shanghai, China, Feb. 27 - Mar. 2, 2017</li>
 		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
