removed mathml for compatibility

--- a/index.html
+++ b/index.html
@@ -65,34 +65,34 @@
 		<h2>Reseach</h2>
 		<p>I am most interested in Number Theory and Arithmetic Geometry.
 		    Currently I am focusing on automorphic forms, theta
-		    correspondence, <math><mrow><mi>L</mi></mrow></math>-functions, endoscopy,
+		    correspondence, <var>L</var>-functions, endoscopy,
 		    periods and Abelian varieties.<br/>
 		    <a href="articles/index.html">Here</a> are some of
 		    my articles and preprints.</p>
 
 		<h2>Talks</h2>
 		<ul>
-		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+		    <li>Period Integrals, <var>L</var>-functions
+			and (<var>χ</var>, <var>b</var>)-theory,
 			Hunan University,
 			Changsha, China, May TBA, 2017
 		    </li>
-		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+		    <li>Period Integrals, <var>L</var>-functions
+			and (<var>χ</var>, <var>b</var>)-theory,
 			National University of Singapore,
 			Singapore, Apr. 16 - 22, 2017
 		    </li>
-		    <li>Period Integrals, <math><mrow><mi>L</mi></mrow></math>-functions
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory,
+		    <li>Period Integrals, <var>L</var>-functions
+			and (<var>χ</var>, <var>b</var>)-theory,
 			Xiamen University,
 			Xiamen, China, Mar. 7 - 10, 2017
 		    </li>
 		    <li>Theta Correspondence, Periods
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory, Zhejiang University,
+			and (<var>χ</var>, <var>b</var>)-theory, Zhejiang University,
 			Hangzhou, China, Sept. 11, 2016
 		    </li>
 		    <li>Periods
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-theory, Taida Institute for
+			and (<var>χ</var>, <var>b</var>)-theory, Taida Institute for
 			Mathematical Sciences, Taipei, China, Aug. 2, 2016
 		    </li>
 		    <li>Weil Conjectures for Abelian Varieties, Taida Institute for
@@ -105,39 +105,37 @@
 		    <li>Local Jacquet-Langlands Correspondence, Shanghai Center for
 			Mathematical Sciences, Shanghai, China, Sept. 22, 2015</li>
 		    <li>Theta correspondence, periods
-			and <math><mrow><mi>L</mi></mrow></math>-functions, Morningside Center
+			and <var>L</var>-functions, Morningside Center
 			of Mathematics, Beijing, China, July 17 and July 19, 2015</li>
 		    <li>Theta correspondence, periods and Arthur Parameters, University of
 			Missouri, Columbia, MO, USA, Apr. 21, 2015</li>
 		    <li>Theta correspondence, periods
-			and <math><mrow><mi>L</mi></mrow></math>-functions, Part III,
+			and <var>L</var>-functions, Part III,
 			University of Minnesota, Minneapolis, MN, USA, Feb. 27, 2015</li>
 		    <li>Theta correspondence, periods
-			and <math><mrow><mi>L</mi></mrow></math>-functions, Part II,
+			and <var>L</var>-functions, Part II,
 			University of Minnesota, Minneapolis, MN, USA, Feb. 13, 2015</li>
 		    <li>Theta correspondence, periods
-			and <math><mrow><mi>L</mi></mrow></math>-functions, Part I, University
+			and <var>L</var>-functions, Part I, University
 			of Minnesota, Minneapolis, MN, USA, Feb. 6, 2015</li>
 		    <li>Some applications of the Arthur trucation method, University of
 			Minnesota, Minneapolis, MN, USA, Nov. 14, 2014</li>
 		    <li>Periods
-			and <math><mrow><mfenced><mi>&chi;</mi><mi>b</mi></mfenced></mrow></math>-factors
+			and (<var>χ</var>, <var>b</var>)-factors
 			of cuspidal automorphic forms of symplectic groups, University of
 			Minnesota, Minneapolis, MN, USA, Nov. 7, 2014</li>
 		    <li>On Gan-Gross-Prasad Conjecture, University of Minnesota, Minneapolis, MN, USA, Nov. 1
 			and Nov. 8, 2013</li>
 		    <li>Virtual Abelian Varieties
-			of <math><mrow><msub><mi>GL</mi><mn>2</mn></msub></mrow></math>-type,
+			of GL<sub>2</sub>-type,
 			Max-Planck-Institut für Mathematik, Bonn, Germany, Dec. 6, 2012</li>
 		    <li>Rallis Inner Product Formula, University of Wisconsin-Madison, Madison, WI, USA,
 			Apr. 12 2012</li>
 		    <li>Theta correspondence for unitary groups, University of Minnesota, Minneapolis, MN, USA, 
 			Jan. 27, Feb. 3, Mar. 2 and Mar. 23, 2012</li>
 		    <li>Rallis Inner Product Formula
-			for <math><mrow><mi>Mp</mi><mfenced separators=""><mn>2</mn><mi>n</mi></mfenced></mrow></math>
-			and
-			<math><mrow><mi mathvariant="normal">O</mi><mfenced separators=""><mn>2</mn><mi>n</mi><mo>+</mo><mn>1</mn>
-			</mfenced></mrow></math>,
+			for Mp(2<var>n</var>)
+			and O(2<var>n</var> + 1),
 			University of Minnesota, Minneapolis, MN, USA, Oct. 7, 2011</li>
 		    <li>Moduli space of virtual Abelian varieties, Yale University, New Haven, CT, USA, Jan. 25, 2011</li>
 		</ul>
@@ -152,7 +150,7 @@
 		    <li>Zhejiang University, visiting Professor Dihua Jiang (江迪华), Hangzhou, China, Oct. 7 - 10, 2016</li>
 		    <li>Workshop on Number Theory at Zhejiang University, Hangzhou, China, Sept. 10 - 12, 2016</li>
 		    <li>Taida Institute for  Mathematical Sciences, Taipei, China, Visiting Professor Chang-Shou Lin (林長壽), July 17 - Aug. 7, 2016</li>
-		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <math><mrow><mi>L</mi></mrow></math>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
+		    <li><a href="http://prasad-heiermann.weebly.com/main-conference.html">Jean-Morlet Chair Research School and Conference on Relative Trace Formula, Periods,  <var>L</var>-functions, Harmonic Analysis and Langlands Functoriality</a>, CIRM, Marseille, France, May 16 - 27, 2016</li>
 		    <li><a href="http://home.kias.re.kr/MKG/h/EKM2015/">Eisenstein Series on Kac-Moody Groups and Application to Physics</a>, KIAS, Seoul, South Korea, Nov. 12 - 20, 2015</li>
 		    <li><a href="http://2015wnt.csp.escience.cn/dct/page/65580">Workshop on Number Theory</a>, Morningside Center for Mathematics, Beijing, China, July 16 - 31, 2015</li>
 		    <li>Past events are omitted.</li>
