--- a/teaching/Spring2012_LinearAlgebraDifferentialEquations.html
+++ b/teaching/Spring2012_LinearAlgebraDifferentialEquations.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta content="text/html; charset=utf-8" http-equiv="content-type">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="../js/lib/jquery/jquery-2.2.1.min.js"></script>
-<script src="../js/common.js"></script>
-<script>
-$(document).ready(init);
-</script>
-<link rel="stylesheet" href="../css/basic.css"/>
-<link id="custom-ss" rel="stylesheet" href=""/>
-<title>Spring 2012 MATH 2373 CSE Linear Algebra and Differential
-Equations</title>
-</head>
-<body>
-<div class= "page">
-<div class= "main">
-<h1>CSE Linear Algebra and Differential Equations</h1>
-<h2 class="western">Spring 2012 MATH 2373 Sections 020 and 040</h2>
-<p><b>For Section 020</b></p>
-<p><b>Day/Time:</b> 02:30 P.M. - 03:20 P.M. ,&nbsp;M,W (01/17/2012
-- 05/04/2012)<br>
-<b>Location:</b> Phys 170<br>
-<b>Instructor:</b> Chenyan Wu<br>
-<b>Contact Information:</b> cywu "at" math.umn.edu<br>
-<b>Office Hours:</b> 01:05 P.M. - 02:30 P.M.<br>
-<b>Textbook:</b> Text by Professor Miracle</p>
-<p><b>For Section 040</b></p>
-<p><b>Day/Time:</b>&nbsp;12:20 P.M. - 01:10 P.M. ,&nbsp;M,W
-(01/17/2012 - 05/04/2012)<br>
-<b>Location:</b> FraserH 101<br>
-<b>Instructor:</b> Chenyan Wu<br>
-<b>Contact Information:</b> cywu "at" math.umn.edu<br>
-<b>Office Hours:</b> 10:05 P.M. - 11:20 P.M.<br>
-<b>Textbook:</b> Text by Professor Miracle</p>
-<p>Please see the text for syllabus and class policy.</p>
-</div></div>
-</body>
+    <head>
+	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="../js/lib/jquery/jquery-3.1.1.min.js"></script>
+	<script src="../js/util.js"></script>
+	<script src="../js/theme.js"></script>
+	<script>
+	 $(document).ready(function(){
+	     var th=themeSetter(new Date());
+	     $("#theme").attr("href",th.themeCSSPath());
+	 });
+	</script>
+	<link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../css/basic.css"/>
+	<link id="theme" rel="stylesheet" href="../css/style-1.css"/>
+	<title>Spring 2012 MATH 2373 CSE Linear Algebra and Differential
+	    Equations</title>
+    </head>
+    <body>
+	<div class= "page">
+	    <div class= "main">
+		<h1>CSE Linear Algebra and Differential Equations</h1>
+		<h2 class="western">Spring 2012 MATH 2373 Sections 020 and 040</h2>
+		<p><b>For Section 020</b></p>
+		<p><b>Day/Time:</b> 02:30 P.M. - 03:20 P.M. ,&nbsp;M,W (01/17/2012
+		    - 05/04/2012)<br>
+		    <b>Location:</b> Phys 170<br>
+		    <b>Instructor:</b> Chenyan Wu<br>
+		    <b>Contact Information:</b> cywu "at" math.umn.edu<br>
+		    <b>Office Hours:</b> 01:05 P.M. - 02:30 P.M.<br>
+		    <b>Textbook:</b> Text by Professor Miracle</p>
+		<p><b>For Section 040</b></p>
+		<p><b>Day/Time:</b>&nbsp;12:20 P.M. - 01:10 P.M. ,&nbsp;M,W
+		    (01/17/2012 - 05/04/2012)<br>
+		    <b>Location:</b> FraserH 101<br>
+		    <b>Instructor:</b> Chenyan Wu<br>
+		    <b>Contact Information:</b> cywu "at" math.umn.edu<br>
+		    <b>Office Hours:</b> 10:05 P.M. - 11:20 P.M.<br>
+		    <b>Textbook:</b> Text by Professor Miracle</p>
+		<p>Please see the text for syllabus and class policy.</p>
+	    </div></div>
+    </body>
 </html>
