--- a/teaching/Spring2015_AppliedLinearAlgebra.html
+++ b/teaching/Spring2015_AppliedLinearAlgebra.html
@@ -1,198 +1,203 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta content="text/html; charset=utf-8" http-equiv="content-type">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="../js/lib/jquery/jquery-2.2.1.min.js"></script>
-<script src="../js/common.js"></script>
-<script>
-$(document).ready(init);
-</script>
-<link rel="stylesheet" href="../css/basic.css"/>
-<link id="custom-ss" rel="stylesheet" href=""/>
-<title>Applied Linear Algebra</title>
-</head>
-<body>
-<div class= "page">
-<div class= "main">
-<h1>Applied Linear Algebra</h1>
-<h2>Spring 2015 MATH 4242 Applied Linear Algebra</h2>
-<h2><b>Section 001 (52322)</b></h2>
-<br>
-<p><b>Day/Time:</b> 10:10 A.M. - 11:00 A.M. , M,W,F (01/20/2015 - 05/08/2015)<b><br>
-Location:</b> Vincent Hall 211<b><br>
-Instructor:</b> Chenyan Wu<br>
-<b>Contact Information:</b> cywu "at" math.umn.edu<br>
-<b>Office Hours:</b> 11:00 A.M. - 11:50 A.M. M,W,F at VinH 302<br>
-<b>Textbook:</b> Applied Linear Algebra by Peter J. Olver and
-Chehrzad Shakiban<br>
-<b>Course Description:</b> This course basically covers Chapters 1,
-2, 3, 5, 7 and 8 of the textbook.</p>
-<p>You should have already taken a one-semester course in Linear
-Algebra. The following knowledge is assumed: systems of linear
-equations, Gaussian elimination, determinants, vector spaces,
-linear independence, basis and dimension. However I will review
-these briefly.</p>
-<p>New topics include the Cramer's rule, the row, column spaces,
-linear transformations, inner product, orthogonality, the
-Gram-Schmidt algorithm, eigenvalues and eigenvectors,
-diagonalization, hermitian matrices, the singular value
-decomposition, quadratic forms, positive definite matrices and the
-Jordan canonical forms. The lectures follow the text fairly
-closely.</p>
-<p><b>Homework:</b> Assignments will be posted below. The cut-off
-time of due date is at noon. Late homework is not acceptable.
-Discussion among students are encouraged, but everyone must write
-his/her own solution. Copying is not allowed and university policy
-applies to those who are found copying. When writing homework
-present your arguments along with math formulae instead of simply
-piling up formulae. Be concise and include only related arguments.
-To avoid losing points unnecessarily do not make the grader guess
-what you mean. Read the assignments carefully. You do not get
-partial credits for doing wrong problems.</p>
-<p><b>Exams Schedules (tentative):</b></p>
-<p>Midterm 1: Feb. 27 in class</p>
-<p>Midterm 2: Apr. 3 in class</p>
-<p>The final is projected to take place at 1:30 p.m.-3:30 p.m., Friday, May 15.</p>
-<p><b>Grading:</b> The final score is produced using the following
-recipe and then converted into letter grades:</p>
-<ul>
-<li>Homework 30% (with the worst score dropped)</li>
-<li>Each Midterm 20%</li>
-<li>The final 30%</li>
-<li>Bonus points from optional group project (see below).</li></ul>
-<p>An optional group project can be submitted for bonus points (10 pts maximum). The final score will be capped at 100. Students should form into groups of three or four people. The project should be related to course material. For example, it can be a survey of  topics from the textbook that we are not going to cover in class. Or it can be a computer program that realises certain algorithm of linear algebra. A written report should be submitted by May 8. Thoroughness, clarity and logic are the aspects that will be evaluated. Good typesetting will also earn you extra points.
-Roughly the top 30% of the students will receive A level grade.</p>
-<br>
-<p><b>Other Policies:</b> Hand-held calculators can be used during
-exams in this course. Programmable calculators cannot be used. Notes and textbooks are not allowed, but a letter-sized double-sided cheat-sheet is allowed.<br></p>
-<br>
-<p><b>Scholastic Conduct:</b> Discussion on homework problems among
-students are encouraged. However it is forbidden to simply copy
-homework. Cheating or other misconduct will not be tolerated and
-standard university policies will apply.<br></p>
-<br>
-<p><b>University Policy Statements:</b> The University Senate
-statements regarding academic dishonesty, credit, and workload
-expectations, and grading standards are at:<br></p>
-<a href=
-"http://policy.umn.edu/Policies/Education/Education/GRADINGTRANSCRIPTS.html">
-http://policy.umn.edu/Policies/Education/Education/GRADINGTRANSCRIPTS.html</a>
-and<br>
-<a href=
-"http://policy.umn.edu/Policies/Education/Education/STUDENTWORK.html">
-http://policy.umn.edu/Policies/Education/Education/STUDENTWORK.html</a>.<br>
+    <head>
+	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script src="../js/lib/jquery/jquery-3.1.1.min.js"></script>
+	<script src="../js/util.js"></script>
+	<script src="../js/theme.js"></script>
+	<script>
+	 $(document).ready(function(){
+	     var th=themeSetter(new Date());
+	     $("#theme").attr("href",th.themeCSSPath());
+	 });
+	</script>
+	<link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="../css/basic.css"/>
+	<link id="theme" rel="stylesheet" href="../css/style-1.css"/>
+	<title>Applied Linear Algebra</title>
+    </head>
+    <body>
+	<div class= "page">
+	    <div class= "main">
+		<h1>Applied Linear Algebra</h1>
+		<h2>Spring 2015 MATH 4242 Applied Linear Algebra</h2>
+		<h2><b>Section 001 (52322)</b></h2>
+		<br>
+		<p><b>Day/Time:</b> 10:10 A.M. - 11:00 A.M. , M,W,F (01/20/2015 - 05/08/2015)<b><br>
+		    Location:</b> Vincent Hall 211<b><br>
+		    Instructor:</b> Chenyan Wu<br>
+		    <b>Contact Information:</b> cywu "at" math.umn.edu<br>
+		    <b>Office Hours:</b> 11:00 A.M. - 11:50 A.M. M,W,F at VinH 302<br>
+		    <b>Textbook:</b> Applied Linear Algebra by Peter J. Olver and
+		    Chehrzad Shakiban<br>
+		    <b>Course Description:</b> This course basically covers Chapters 1,
+		    2, 3, 5, 7 and 8 of the textbook.</p>
+		<p>You should have already taken a one-semester course in Linear
+		    Algebra. The following knowledge is assumed: systems of linear
+		    equations, Gaussian elimination, determinants, vector spaces,
+		    linear independence, basis and dimension. However I will review
+		    these briefly.</p>
+		<p>New topics include the Cramer's rule, the row, column spaces,
+		    linear transformations, inner product, orthogonality, the
+		    Gram-Schmidt algorithm, eigenvalues and eigenvectors,
+		    diagonalization, hermitian matrices, the singular value
+		    decomposition, quadratic forms, positive definite matrices and the
+		    Jordan canonical forms. The lectures follow the text fairly
+		    closely.</p>
+		<p><b>Homework:</b> Assignments will be posted below. The cut-off
+		    time of due date is at noon. Late homework is not acceptable.
+		    Discussion among students are encouraged, but everyone must write
+		    his/her own solution. Copying is not allowed and university policy
+		    applies to those who are found copying. When writing homework
+		    present your arguments along with math formulae instead of simply
+		    piling up formulae. Be concise and include only related arguments.
+		    To avoid losing points unnecessarily do not make the grader guess
+		    what you mean. Read the assignments carefully. You do not get
+		    partial credits for doing wrong problems.</p>
+		<p><b>Exams Schedules (tentative):</b></p>
+		<p>Midterm 1: Feb. 27 in class</p>
+		<p>Midterm 2: Apr. 3 in class</p>
+		<p>The final is projected to take place at 1:30 p.m.-3:30 p.m., Friday, May 15.</p>
+		<p><b>Grading:</b> The final score is produced using the following
+		    recipe and then converted into letter grades:</p>
+		<ul>
+		    <li>Homework 30% (with the worst score dropped)</li>
+		    <li>Each Midterm 20%</li>
+		    <li>The final 30%</li>
+		    <li>Bonus points from optional group project (see below).</li></ul>
+		<p>An optional group project can be submitted for bonus points (10 pts maximum). The final score will be capped at 100. Students should form into groups of three or four people. The project should be related to course material. For example, it can be a survey of  topics from the textbook that we are not going to cover in class. Or it can be a computer program that realises certain algorithm of linear algebra. A written report should be submitted by May 8. Thoroughness, clarity and logic are the aspects that will be evaluated. Good typesetting will also earn you extra points.
+		    Roughly the top 30% of the students will receive A level grade.</p>
+		<br>
+		<p><b>Other Policies:</b> Hand-held calculators can be used during
+		    exams in this course. Programmable calculators cannot be used. Notes and textbooks are not allowed, but a letter-sized double-sided cheat-sheet is allowed.<br></p>
+		<br>
+		<p><b>Scholastic Conduct:</b> Discussion on homework problems among
+		    students are encouraged. However it is forbidden to simply copy
+		    homework. Cheating or other misconduct will not be tolerated and
+		    standard university policies will apply.<br></p>
+		<br>
+		<p><b>University Policy Statements:</b> The University Senate
+		    statements regarding academic dishonesty, credit, and workload
+		    expectations, and grading standards are at:<br></p>
+		<a href=
+		   "http://policy.umn.edu/Policies/Education/Education/GRADINGTRANSCRIPTS.html">
+		    http://policy.umn.edu/Policies/Education/Education/GRADINGTRANSCRIPTS.html</a>
+		and<br>
+		<a href=
+		   "http://policy.umn.edu/Policies/Education/Education/STUDENTWORK.html">
+		    http://policy.umn.edu/Policies/Education/Education/STUDENTWORK.html</a>.<br>
 
-<hr>
-<h2>Schedule of Lectures</h2>
-<table border="1" cellpadding="2"
-cellspacing="0" width="100%">
-<col style="width:15%">
-<col style="width:20%">
-<col style="width:45%">
-<col style="width:20%">
-<thead>
-<tr>
-<th>
-Week
-</th>
-<th>
-Topic
-</th>
-<th>
-Homework
-</th>
-<th>
-Due Date
-</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>01/20 - 01/25</td>
-<td>1.1 - 1.4</td>
-<td>1.2.14, 1.3.4, 1.3.15, 1.3.17, 1.3.22(bdfh), 1.4.9, 1.4.10(bd)
-</td>
-<td>01/30</td>
-</tr>
-<tr>
-<td>01/26 - 02/01</td>
-<td>1.5, 1.6, 1.8, 1.9</td>
-<td>1.4.20(ac), 1.5.4, 1.5.7, 1.5.24(bfh), 1.6.25(bd), 1.8.1(bdf), 1.8.5</td>
-<td>02/06</td>
-</tr>
-<tr>
-<td>02/02 - 02/08</td>
-<td>Cramer's rule (c.f. ex. 1.9.22), 2.1, 2.2, 2.3</td>
-<td>1.9.1(g), 1.9.5, 2.1.2, 2.2.1, 2.2.2(bdfhj), 2.2.15, 2.3.2, 2.3.7, 2.3.8</td>
-<td>02/13</td></tr>
-<tr>
-<td>02/09 - 02/15</td>
-<td>2.3, 2.4, 2.5</td>
-<td>2.3.22, 2.3.33(aeg), 2.4.2, 2.4.3(ac), 2.4.10, 2.5.1(bd), 2.5.4, 2.5.5(ace)</td>
-<td>02/20</td></tr>
-<tr>
-<td>02/16 - 02/22</td>
-<td>2.5, 3.1, 3.2</td>
-<td>2.5.12, 2.5.21(d), 2.5.25(e), 2.5.36, 3.1.2(ceg), 3.1.3, 3.1.13, 3.1.22, 3.2.16, 3.2.17 (do the part related to 3.2.16)</td>
-<td>03/02</td></tr>
-<tr>
-<td>02/23 - 03/01</td>
-<td>3.2</td>
-<td>3.2.28, 3.2.2, 3.2.3, 3.2.6, 3.2.36</td>
-<td>03/06</td></tr>
-<tr>
-<td>03/02 - 03/08</td>
-<td>3.4, 3.5</td>
-<td>3.4.1(bdf), 3.4.2, 3.5.1(bdf), 3.5.11</td>
-<td>03/13</td></tr>
-<tr>
-<td>03/09 - 03/15</td>
-<td>3.5, 3.6</td>
-<td>3.5.7(bde), 3.5.21(aceg), 3.4.22(vi,viii), 3.4.24(vi,viii), 3.4.26, 3.6.28(aceg), 3.6.29, 3.6.33, 3.6.35(ace)</td>
-<td>03/25</td></tr>
-<tr>
-<td>03/16 - 03/22</td>
-<td>Spring Break</td>
-<td></td>
-<td></td></tr>
-<tr>
-<td>03/23 - 03/29</td>
-<td>5.1, 5.2, 5.3</td>
-<td>5.1.2, 5.1.21, 5.2.2(b), 5.2.3, 5.2.4, 5.2.8(i, just use vectors in 5.2.1(a), no need to do (bc)), 5.3.1, 5.3.4 </td>
-<td>04/06</td></tr>
-<tr>
-<td>03/30 - 04/05</td>
-<td>5.3, 5.6</td>
-<td>5.3.28, 5.5.1(bd), 5.5.9, 5.6.1(b), 5.6.3</td>
-<td>04/10</td></tr>
-<tr>
-<td>04/06 - 04/12</td>
-<td>5.5, 5.6, 7.1</td>
-<td>5.5.7, 5.6.17(d), 7.1.5(aceg), 7.1.7, 7.1.9, 7.1.14</td>
-<td>04/17</td></tr>
-<tr>
-<td>04/13 - 04/19</td>
-<td>7.1, 7.2</td>
-<td>7.1.30, 7.1.37(bdfh), 7.1.53, 7.2.25(ac), 7.2.3, 7.2.4</td>
-<td>04/24</td></tr>
-<tr>
-<td>04/20 - 04/26</td>
-<td>7.3, 7.5</td>
-<td>7.2.26(ce), 7.3.1(bcdf), 7.3.10(ace), 7.5.3(c), 7.5.16</td>
-<td>05/01</td></tr>
-<tr>
-<td>04/27 - 05/03</td>
-<td>8.2, 8.3, 8.4</td>
-<td>8.2.1(fhjk), 8.2.4(b), 8.2.16, 8.2.37, 8.3.3(dfh), 8.3.8, 8.3.15(dfh), 8.3.21(bd), 8.4.2(bd), 8.4.35</td>
-<td>05/08 (last set of homework)</td></tr>
-<tr>
-<td>05/04 - 05/08</td>
-<td>8.5, 8.6</td>
-<td>Suggested Problems: 8.5.1, 8.5.2, 8.5.7, 8.5.8, 8.5.15, 8.5.20, 8.6.6. 8.6.7, 8.6.9, 8.6.11, 8.6.14</td>
-<td>N/A</td></tr>
-</tbody>
-</table>
-</div></div>
-</body>
+		<hr>
+		<h2>Schedule of Lectures</h2>
+		<table border="1" cellpadding="2"
+		       cellspacing="0" width="100%">
+		    <col style="width:15%">
+		    <col style="width:20%">
+		    <col style="width:45%">
+		    <col style="width:20%">
+		    <thead>
+			<tr>
+			    <th>
+				Week
+			    </th>
+			    <th>
+				Topic
+			    </th>
+			    <th>
+				Homework
+			    </th>
+			    <th>
+				Due Date
+			    </th>
+			</tr>
+		    </thead>
+		    <tbody>
+			<tr>
+			    <td>01/20 - 01/25</td>
+			    <td>1.1 - 1.4</td>
+			    <td>1.2.14, 1.3.4, 1.3.15, 1.3.17, 1.3.22(bdfh), 1.4.9, 1.4.10(bd)
+			    </td>
+			    <td>01/30</td>
+			</tr>
+			<tr>
+			    <td>01/26 - 02/01</td>
+			    <td>1.5, 1.6, 1.8, 1.9</td>
+			    <td>1.4.20(ac), 1.5.4, 1.5.7, 1.5.24(bfh), 1.6.25(bd), 1.8.1(bdf), 1.8.5</td>
+			    <td>02/06</td>
+			</tr>
+			<tr>
+			    <td>02/02 - 02/08</td>
+			    <td>Cramer's rule (c.f. ex. 1.9.22), 2.1, 2.2, 2.3</td>
+			    <td>1.9.1(g), 1.9.5, 2.1.2, 2.2.1, 2.2.2(bdfhj), 2.2.15, 2.3.2, 2.3.7, 2.3.8</td>
+			    <td>02/13</td></tr>
+			<tr>
+			    <td>02/09 - 02/15</td>
+			    <td>2.3, 2.4, 2.5</td>
+			    <td>2.3.22, 2.3.33(aeg), 2.4.2, 2.4.3(ac), 2.4.10, 2.5.1(bd), 2.5.4, 2.5.5(ace)</td>
+			    <td>02/20</td></tr>
+			<tr>
+			    <td>02/16 - 02/22</td>
+			    <td>2.5, 3.1, 3.2</td>
+			    <td>2.5.12, 2.5.21(d), 2.5.25(e), 2.5.36, 3.1.2(ceg), 3.1.3, 3.1.13, 3.1.22, 3.2.16, 3.2.17 (do the part related to 3.2.16)</td>
+			    <td>03/02</td></tr>
+			<tr>
+			    <td>02/23 - 03/01</td>
+			    <td>3.2</td>
+			    <td>3.2.28, 3.2.2, 3.2.3, 3.2.6, 3.2.36</td>
+			    <td>03/06</td></tr>
+			<tr>
+			    <td>03/02 - 03/08</td>
+			    <td>3.4, 3.5</td>
+			    <td>3.4.1(bdf), 3.4.2, 3.5.1(bdf), 3.5.11</td>
+			    <td>03/13</td></tr>
+			<tr>
+			    <td>03/09 - 03/15</td>
+			    <td>3.5, 3.6</td>
+			    <td>3.5.7(bde), 3.5.21(aceg), 3.4.22(vi,viii), 3.4.24(vi,viii), 3.4.26, 3.6.28(aceg), 3.6.29, 3.6.33, 3.6.35(ace)</td>
+			    <td>03/25</td></tr>
+			<tr>
+			    <td>03/16 - 03/22</td>
+			    <td>Spring Break</td>
+			    <td></td>
+			    <td></td></tr>
+			<tr>
+			    <td>03/23 - 03/29</td>
+			    <td>5.1, 5.2, 5.3</td>
+			    <td>5.1.2, 5.1.21, 5.2.2(b), 5.2.3, 5.2.4, 5.2.8(i, just use vectors in 5.2.1(a), no need to do (bc)), 5.3.1, 5.3.4 </td>
+			    <td>04/06</td></tr>
+			<tr>
+			    <td>03/30 - 04/05</td>
+			    <td>5.3, 5.6</td>
+			    <td>5.3.28, 5.5.1(bd), 5.5.9, 5.6.1(b), 5.6.3</td>
+			    <td>04/10</td></tr>
+			<tr>
+			    <td>04/06 - 04/12</td>
+			    <td>5.5, 5.6, 7.1</td>
+			    <td>5.5.7, 5.6.17(d), 7.1.5(aceg), 7.1.7, 7.1.9, 7.1.14</td>
+			    <td>04/17</td></tr>
+			<tr>
+			    <td>04/13 - 04/19</td>
+			    <td>7.1, 7.2</td>
+			    <td>7.1.30, 7.1.37(bdfh), 7.1.53, 7.2.25(ac), 7.2.3, 7.2.4</td>
+			    <td>04/24</td></tr>
+			<tr>
+			    <td>04/20 - 04/26</td>
+			    <td>7.3, 7.5</td>
+			    <td>7.2.26(ce), 7.3.1(bcdf), 7.3.10(ace), 7.5.3(c), 7.5.16</td>
+			    <td>05/01</td></tr>
+			<tr>
+			    <td>04/27 - 05/03</td>
+			    <td>8.2, 8.3, 8.4</td>
+			    <td>8.2.1(fhjk), 8.2.4(b), 8.2.16, 8.2.37, 8.3.3(dfh), 8.3.8, 8.3.15(dfh), 8.3.21(bd), 8.4.2(bd), 8.4.35</td>
+			    <td>05/08 (last set of homework)</td></tr>
+			<tr>
+			    <td>05/04 - 05/08</td>
+			    <td>8.5, 8.6</td>
+			    <td>Suggested Problems: 8.5.1, 8.5.2, 8.5.7, 8.5.8, 8.5.15, 8.5.20, 8.6.6. 8.6.7, 8.6.9, 8.6.11, 8.6.14</td>
+			    <td>N/A</td></tr>
+		    </tbody>
+		</table>
+	    </div></div>
+    </body>
 </html>
