--- a/teaching/Spring2017_CommutativeAlgebra.html
+++ b/teaching/Spring2017_CommutativeAlgebra.html
@@ -10,7 +10,7 @@
 	<script src="../js/load-homework.js"></script>
 	<script>
 	 $(document).ready(function(){
-	     var th=themeSetter(new Date());
+	     var th=themeSetter();
 	     $("#theme").attr("href",th.themeCSSPath());
 
 	     var homeworkElement=$("#hw");
